apps/pgadmin4/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  namespace: cnpg-dev
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      securityContext:
        fsGroup: 5050
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
          securityContext:
            runAsUser: 5050
            runAsGroup: 5050
            allowPrivilegeEscalation: false
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin4-data
