apps/pgadmin4/base/psql-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-client
spec:
  containers:
    - name: psql
      image: postgres:15
      command: [ "sleep", "3600" ]
  restartPolicy: Never
