apps/pgadmin4/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: cnpg-dev
spec:
  selector:
    app: pgadmin4
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
